chore: documenting DELETE operation of api
