# docs/openapi/swagger.json
@@ -313,6 +313,64 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Allows you to delete a student's data after finding them.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "students"
+                ],
+                "summary": "Allows you to delete a student data.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "To identify the tenant",
+                        "name": "x-tenant",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "To identify the request",
+                        "name": "x-cid",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Student identifier",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Result"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Result"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Result"
+                        }
+                    }
+                }
             }
         }
     },
